Started product microservices, and user miccroservice corrections